--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcZo6RgKRy-vjVBiCdZhGrdY154Dt6CFg&callback=initMap"
+    async defer></script>
   </body>
 </html>
